tests/baselines/reference/FunctionDeclaration4_es6.errors.txt
FunctionDeclaration4_es6.ts(1,10): error TS1212: Identifier expected. 'yield' is a reserved word in strict mode.


==== FunctionDeclaration4_es6.ts (1 errors) ====
    function yield() {
             ~~~~~
!!! error TS1212: Identifier expected. 'yield' is a reserved word in strict mode.
    }